--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     
             <section id="section3">
                 <p class="sectionHeader">Photos</p>
-                <a href="./photo.html"><img src="./image/photos.png" class="sectionImg"></a>
+                <a href="./Photo.html"><img src="./image/photos.png" class="sectionImg"></a>
             </section>  
         </main> 
         <article>
