--- a/Me.html
+++ b/Me.html
@@ -37,15 +37,16 @@
                     <li>Primary :  Khaosai Thapklo Phittaya School Phichit. </li>
                     <li>Vocational certificate : Chondaen Industrial and Community Education College (Business Computer#13)</li>
                     <li>Currently studying for bachelor's degree : KMITL </li>  
-                </section>
-                <section id="section4">
-                    <p class="sectionHeader"><u>Contact</u></p>
-                    <a href="http://line.me/ti/p/4m342lDOFx"><img src="./image/Line.png" class="Menu"></a>&emsp; LINE&emsp;
-                    <a href="https://www.facebook.com/Pornsiri.Homniam"><img src="./image/mylove-icon.png" class="Menu"></a>&emsp;  FACEBOOK<br>                     
-                    <a href="./photos.html"><img src="./image/photo-icon.png"class="Menu"></div></a>&emsp; INSTAGRAM
-                </section>
-                
+                </section>      
             </main>
+            <section id="section4">
+                <p class="sectionHeader"><u>Contact</u></p>
+                <a href="http://line.me/ti/p/4m342lDOFx"><img src="./image/Line.png" class="Menu"></a>&emsp;LINE&emsp;&emsp;&emsp;&emsp;
+                <a href="https://www.facebook.com/Pornsiri.Homniam"><img src="./image/f-icon.png" class="Menu"></a>&emsp;FACEBOOK&emsp;&emsp;&emsp;&emsp;
+                <a href="https://www.instagram.com/gobpy_eye"><img src="./image/ig_icon.png" class="Menu"></a>&emsp;INSTAGRAM&emsp;&emsp;&emsp;&emsp;
+                <a href="https://plus.google.com/u/0/100635243599227574316"><img src="./image/ig_icon.png" class="Menu"></a>&emsp;GOOGLE+&emsp;&emsp;&emsp;&emsp;
+                <a href="https://github.com/PornsiriG"><img src="./image/git-icon.png" class="Menu"></a>&emsp;GitHub
+            </section>
         <footer>
             <footer>
                 <p>Pornsiri  Homniam</p>
