--- a/Photos.html
+++ b/Photos.html
@@ -12,7 +12,7 @@
         <nav class="mainMenu">
             <li><a href="./index.html"><img src="./image/home-icon.png" class="Menu"><br>Home</a></li>
             <li><a href="./Me.html"><img src="./image/pro-icon.png" class="Menu"></div><br>My Profile</a></li>
-            <li><a href="./mylove.html"><img src="./image/mylove-icon.png"class="Menu"></div><br>Photos</a></li>
+            <li><a href="./mylove.html"><img src="./image/mylove-icon.png"class="Menu"></div><br>My Love</a></li>
         </nav>      
             <main>
                 
